# chapterforge

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Build-Release.ps1  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChapterForge.spec  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY.md  cli_main.py  issues.md  main.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  smoke_ui.py
chapterforge/: __init__.py  __main__.py  a11y.py  activity.py  acx.py  app.py  audio_engine.py  auphonic_dialogs.py  autostart.py  cli.py  context_help.py  control_help.json  control_help.py  core.py  docs.py  feature_flags.py  lookup.py  manifest.py  notify.py  player.py  publish_dialogs.py  rss.py  settings.py  tray.py  updates.py  validation.py  watch_dialogs.py  watcher.py  watcher_config.py  wizard.py
docs/: AUPHONIC_INTEGRATION.md  CNAME  CODE_QUALITY.md  CONTROL_REFERENCE.md  DEPLOYMENT.md  FEEDBACK_HUB_PRODUCTION.md  GITHUB_PAGES_SETUP.md  LINTING.md  PRD.md  PRE_RELEASE_AUDIT.md  RELEASE_REVIEW.md  ROADMAP.md  USER_GUIDE.md  _config.yml  index.html  index.md  landing.html  press-release-v1.0.0.md  press-release-v2.0.0.html  press-release-v2.0.0.md
installer/: ChapterForge-Portable.iss  ChapterForge.iss
samples/: README.md
schemas/: chapterforge.json
tests/: test_a11y.py  test_activity.py  test_ai_discovery.py  test_ai_unified_dialog.py  test_app_initialization.py  test_auphonic_client.py  test_auphonic_models.py  test_auphonic_validate.py  test_chapterforge_components.py  test_core.py  test_docs.py  test_enhancements.py  test_features.py  test_feedback.py  test_lookup_rss.py  test_metadata.py  test_mp3_chapters.py  test_settings.py  test_updates.py  test_watcher.py
(+49 files in other folders)
